version/0.13/_sources/api/solver/_autosummary/settings/solut_exp_coeff.rst.txt
:orphan:

.. _solut_exp_coeff:

solut_exp_coeff
===============

.. autoclass:: ansys.fluent.core.solver.settings_231.solut_exp_coeff.solut_exp_coeff

.. rubric:: Attributes

========================   ====================================================

Attribute                                                               Summary

========================   ====================================================
:ref:`option <option_9>`       Select method for calculating material property.

:ref:`value <value>`                                             'value' child.

========================   ====================================================

.. rubric:: Included in:

================================   =================================

Parent                                                       Summary

================================   =================================
:ref:`fluid_child <fluid_child>`       'child_object_type' of fluid.

================================   =================================

