version/0.21/_sources/api/solver/_autosummary/settings/solut_exp_coeff.rst.txt
:orphan:

.. _solut_exp_coeff:

solut_exp_coeff
===============

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.solut_exp_coeff.solut_exp_coeff
    :show-inheritance:

.. rubric:: Attributes

=========================   ====================================================

Attribute                                                                Summary

=========================   ====================================================
:ref:`option <option_12>`       Select method for calculating material property.

:ref:`value <value_11>`                     Specify the constant property value.

=========================   ====================================================

.. rubric:: Included in:

======================================   ====================================

Parent                                                                Summary

======================================   ====================================
:ref:`fluid_child <fluid_child>`                'child_object_type' of fluid.

:ref:`material_child <material_child>`       'child_object_type' of material.

======================================   ====================================

